--- a/notification-web-application/.settings/org.eclipse.wst.common.component
+++ b/notification-web-application/.settings/org.eclipse.wst.common.component
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="careid-web-application">
+    <wb-module deploy-name="notificationwebapp">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <property name="java-output-path" value="/careid-web-application/target/classes"/>
+        <property name="java-output-path" value="/notification-web-application/target/classes"/>
         <property name="context-root" value="notificationwebapp"/>
         <property name="component.exclusion.patterns" value="${excludeMinify}"/>
     </wb-module>
